# multiqa_utils

./: .gitignore  README.md  setup.cfg  setup.py
data_files/: words_to_ignore.json
multiqa_utils/: ambigqa_utils.py  cwq_utils.py  data_utils.py  decomposition_utils.py  distributed_utils.py  dpr_tokenizer_utils.py  elq_utils.py  entity_linking_utils.py  eval_utils.py  general_utils.py  genre_utils.py  helper_classes.py  index_utils.py  llama_utils.py  maqa_inspect_utils.py  maqa_wiki_utils.py  metrics_utils.py  openai_utils.py  pr_curve_utils.py  qampari_utils.py  quest_utils.py  retrieval_utils.py  romqa_utils.py  string_utils.py  text_viz_utils.py  webqsp_utils.py  wiki_processing_utils.py  wiki_utils.py  wikipedia_utils.py
notebooks/: create_encoding_sbatch.ipynb  create_qampari_dataset.ipynb  entity_linking.ipynb  eval_reader.ipynb  eval_retriever.ipynb  explore_datasets.ipynb  full_page_heuristic.ipynb  opt_for_selfask.ipynb  postprocess_data.ipynb  preprocess_entity_data.ipynb  process_new_wikipedia.ipynb  qampari_heursitic.ipynb  qmp_baselines.ipynb  retrieval.ipynb  retrieval_and_filtering.ipynb  self_ask.ipynb
reamdes/: proprocessing_new_wikipedia.md  train_ambigqa_dpr.md
scripts/: convert_multiqa_trec_run_to_dpr_retrieval.py  distributed_build_str2wikipage_cache.py  download_data.py  elq_link.py  json_to_jsonl.py
scripts/sbatch_files/: build_str2wiki.sbatch  sbatch_array_test.sbatch
