[metadata]
name = multiqa_utils
version = 0.0.1
author = Danielle Rothermel
author_email = danielle.rothermel@gmail.com
description = Utils for multi-answer QA

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    jsonlines
    numpy
    omegaconf
    pygtrie

[options.extras_require]
dev = 
    black == 22.8.0
    flake8 == 6.1.0
notebook =
    jupyterlab
    matplotlib
runs =
    wandb
    hydra-core == 1.2.0
    transformers == 4.6.0
prompting = openai

[options.package_data]
utils = *.txt
* = README.md

[flake8]
exclude =
    .git
    .ipynb_checkpoints*
    notebooks*
    slurm*
    to_sort*
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
